// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilmContainer page component renders correctly when connected to the store 1`] = `
<FilmContainer
  fetchFilm={[Function]}
  film={null}
  filmError={null}
  filmIsFetching={false}
  genre=""
  reFetchFilms={[Function]}
  relatedFilms={Array []}
  relatedFilmsError={null}
  relatedFilmsIsFetching={false}
  store={
    Object {
      "close": [Function],
      "dispatch": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "runSaga": [Function],
      "subscribe": [Function],
      Symbol(observable): [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "clear": [Function],
        "get": [Function],
        "notify": [Function],
        "subscribe": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "close": [Function],
        "dispatch": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "runSaga": [Function],
        "subscribe": [Function],
        Symbol(observable): [Function],
      },
      "unsubscribe": [Function],
    }
  }
/>
`;

exports[`FilmContainer page component renders correctly when film and relatedFilms are provided 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <Link
        className="button button--small button--primary"
        replace={false}
        to="/search"
      >
        Search
      </Link>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Film overview",
            "poster_path": "http://via.placeholder.com/500x750",
            "release_date": "2018-05-04",
            "title": "Film title",
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <FilmsGrid
        films={
          Array [
            Object {
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Film overview",
              "poster_path": "http://via.placeholder.com/500x750",
              "release_date": "2018-05-04",
              "title": "Film title",
            },
          ]
        }
      />
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;

exports[`FilmContainer page component renders correctly when no related films found 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <Link
        className="button button--small button--primary"
        replace={false}
        to="/search"
      >
        Search
      </Link>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Film overview",
            "poster_path": "http://via.placeholder.com/500x750",
            "release_date": "2018-05-04",
            "title": "Film title",
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <ContentMessage
        className="font-size-header font-bold color-alt"
      >
        No related movies found
      </ContentMessage>
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;

exports[`FilmContainer page component renders correctly when related films had failed to load 1`] = `
<React.Fragment>
  <HelmetWrapper
    defer={true}
    encodeSpecialCharacters={true}
  >
    <title>
      Film title
       🎥 Movie Search
    </title>
  </HelmetWrapper>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <Link
        className="button button--small button--primary"
        replace={false}
        to="/search"
      >
        Search
      </Link>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={
          Object {
            "genres": Array [
              "some genre",
              "another genre",
            ],
            "id": 1,
            "overview": "Film overview",
            "poster_path": "http://via.placeholder.com/500x750",
            "release_date": "2018-05-04",
            "title": "Film title",
          }
        }
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <ContentMessage
        className="error-message"
      >
        Unable to load related movies
      </ContentMessage>
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;

exports[`FilmContainer page component renders correctly when the film is not found 1`] = `<NotFound />`;

exports[`FilmContainer page component renders correctly when the film is unavailable 1`] = `
<React.Fragment>
  <Header>
    <div
      className="padding-controls flex flex-align-center"
    >
      <div
        className="flex-grow"
      >
        <SiteName />
      </div>
      <Link
        className="button button--small button--primary"
        replace={false}
        to="/search"
      >
        Search
      </Link>
    </div>
    <LoadingBlock
      hideText={true}
      isLoaded={true}
    >
      <FilmDetails
        film={null}
      />
    </LoadingBlock>
  </Header>
  <main
    className="content"
  >
    <LoadingBlock
      hideText={false}
      isLoaded={true}
    >
      <SearchResultsPanel>
        Films by 
        Horror
         genre
      </SearchResultsPanel>
      <FilmsGrid
        films={
          Array [
            Object {
              "genres": Array [
                "some genre",
                "another genre",
              ],
              "id": 1,
              "overview": "Film overview",
              "poster_path": "http://via.placeholder.com/500x750",
              "release_date": "2018-05-04",
              "title": "Film title",
            },
          ]
        }
      />
    </LoadingBlock>
  </main>
  <Footer />
</React.Fragment>
`;
